--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,28 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+	font-family : Open Sans ;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#all-li li {
+	margin-left: 30px;
+}
+#LoginButton:hover{
+	box-shadow: 0.3px 0.6px 1px 2px #7ECB20;
+}
+
+@media only screen and (max-width: 500px) {
+	#form {
+		width: 100% !important;
+	}
+    #navbar{
+		width: 100% !important;
+	}
+	#topHeading{
+			font-size:32px !important;
+	}
+	#tagHeading{
+		font-size:18px !important;
+	}
+}
+.navbar-nav {
+	margin-left: auto;
 }
